[gd_scene load_steps=2 format=3 uid="uid://c4ga5sgqatc5m"]

[ext_resource type="Script" uid="uid://bhjs22flmelsx" path="res://title_screen.gd" id="1_7xhpk"]

[node name="title_screen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
size_flags_stretch_ratio = 0.0
script = ExtResource("1_7xhpk")

[node name="ScrollContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -123.5
offset_top = -2.75
offset_right = 176.5
offset_bottom = 97.25

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
text = "Swift Roll
"

[node name="Button2" type="Button" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
text = "MM-247 Scarlet Storm"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.138
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -60.0
offset_right = 20.0
offset_bottom = -50.0
grow_horizontal = 2
text = "Battle-ready Robo-roller"
vertical_alignment = 2

[node name="focus_box" type="Control" parent="."]
anchors_preset = 0
offset_left = -126.75
offset_top = -18.0
offset_right = 157.5
offset_bottom = 64.25

[connection signal="pressed" from="ScrollContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
